Asset container saved by arodriguez@oneparkfinancial.com

--- a/site/content/assets/main.yaml
+++ b/site/content/assets/main.yaml
@@ -4,3 +4,6 @@ url: /assets
 assets:
   img/b0ddb14a1f5b4753ab4901f07928be33_940x385.jpg:
     focus: 49-81
+  img/406755-3-small-business-loans-for-women-with-bad-credit-(1).jpg:
+    title: 'Small business loans for woman'
+    alt: 'Bad credit business loans for woman'
