--- a/site/storage/forms/lead/1565386015.5786.yaml
+++ b/site/storage/forms/lead/1565386015.5786.yaml
@@ -7,7 +7,7 @@ utm_term: ''
 utm_content: ''
 transaction_id: ''
 source: /pre-qualification-2
-api_id: '15500'
+api_id: 15500
 submission_id: 1565386015.5786
 step: '1'
 company_name: 'Jose Vera INC'
