--- a/site/storage/forms/lead/1565664173.2606.yaml
+++ b/site/storage/forms/lead/1565664173.2606.yaml
@@ -7,7 +7,7 @@ transaction_id: ''
 gclid: ''
 msclkid: ''
 source: /pre-qualification-2
-api_id: '19564'
+api_id: 19564
 ip: 76.217.95.97
 language: en
 step: 2
