--- a/site/storage/forms/lead/1565664173.2606.yaml
+++ b/site/storage/forms/lead/1565664173.2606.yaml
@@ -7,10 +7,10 @@ transaction_id: ''
 gclid: ''
 msclkid: ''
 source: /pre-qualification-2
-api_id: 19564
+api_id: '19564'
 ip: 76.217.95.97
 language: en
-step: 3
+step: 4
 company_name: 'Game Of Throne'
 company_years_in_business: '2'
 company_revenue: '5000'
@@ -37,3 +37,12 @@ company_address_line1: '141 Grand AVE'
 company_address_city: Miami
 company_address_state: FL
 company_address_zip: '33133'
+company_owners_total: 'Single Owner'
+company_owner1_phone: '(239) 010-1011'
+company_owner1_email: john.snow@gmail.com
+company_owner1_dob: 01/01/1900
+company_owner1_ssn: '23323232323'
+company_owner1_title: CEO
+company_owner1_address_line1: '141 Grand AVE'
+company_owner1_address_city: Miami
+company_owner1_address_zip: '33133'
